--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This project is based on three authentication methods Session,Token,Passwordless based authentication",
   "main": "index.js",
   "scripts": {
+    "sessionAuth": "nodemon sessionAuth.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,5 +26,11 @@
   "bugs": {
     "url": "https://github.com/Rishabh2324/authentication-methods-using-nodejs/issues"
   },
-  "homepage": "https://github.com/Rishabh2324/authentication-methods-using-nodejs#readme"
+  "homepage": "https://github.com/Rishabh2324/authentication-methods-using-nodejs#readme",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongodb": "^4.11.0",
+    "nodemon": "^2.0.20"
+  }
 }
