--- a/package.json
+++ b/package.json
@@ -28,9 +28,15 @@
   },
   "homepage": "https://github.com/Rishabh2324/authentication-methods-using-nodejs#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^6.14.2",
     "mongodb": "^4.11.0",
-    "nodemon": "^2.0.20"
+    "mongoose": "^6.7.0",
+    "nodemailer": "^6.8.0",
+    "nodemon": "^2.0.20",
+    "shortid": "^2.2.16"
   }
 }
